# dharmatiles

./: .gitignore  pyproject.toml
docs/: grass-scene-v1.md
docs/design/: grass-heightmap.md
meta/history/: 2026-05-30-15-30-grass-tile-code-review.md
scad/: dungeonblocks-blank.scad
scad/experiments/: floor-wall-tile.json  floor-wall-tile.scad  hewn-stone.scad
scripts/: BLADE_DESIGN.md  blade.py  generate-grass-heightmap-flowfield.py  generate-grass-heightmap.py  generate-grass-scene.py  generate-grass-stl.py  generate-grass-support-stl.py  generate-grass.py  prepare-heightmap.py
scripts/archived/: generate-grass-blade-heightmap.py  generate-grass-heightmap-v1.py  generate-grass-stl.py  generate-grass-support-stl.py
src/dharmatiles/: __init__.py
src/dharmatiles.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/dharmatiles/core/: __init__.py  collision.py  flow.py  grid.py  mesh.py  tile.py
src/dharmatiles/layers/: __init__.py  grass.py  gravel.py
src/dharmatiles/terrains/: __init__.py  grass_tile.py
