[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dharmatiles"
version = "0.1.0"
description = "Procedural 3D-printable terrain tiles"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "trimesh",
    "scipy",
]

[project.scripts]
generate-grass-stl = "dharmatiles.terrains.grass_tile:main"

[tool.setuptools.packages.find]
where = ["src"]
